--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -9,6 +9,7 @@
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">Hot Deals</a></li>
         <li><a href="#">Categories</a></li>
+        <li><a href="/admin/add-category">Add Category</a></li>
         <li><a href="/cart">Cart</a></li>
         <li><a href="/orders">Orders</a></li>
         <% if (isAuthenticated) { %>
