--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -119,7 +119,7 @@
     <div class="container">
       <!-- row -->
       <div class="row">
-        <div class="col-md-12 text-center">
+        <!-- <div class="col-md-12 text-center">
           <ul class="footer-payments">
             <li>
               <a href="#"><i class="fa fa-cc-visa"></i></a>
@@ -140,18 +140,8 @@
               <a href="#"><i class="fa fa-cc-amex"></i></a>
             </li>
           </ul>
-          <span class="copyright">
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;
-            <script>
-              document.write(new Date().getFullYear());
-            </script>
-            All rights reserved | This template is made with
-            <i class="fa fa-heart-o" aria-hidden="true"></i> by
-            <a href="https://colorlib.com" target="_blank">Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          </span>
-        </div>
+           
+        </div> -->
       </div>
       <!-- /row -->
     </div>
