--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -57,7 +57,7 @@
         <div class="col-md-3">
           <div class="header-logo">
             <a href="/" class="logo">
-              <img src="../img/logo.png" alt="" />
+              <img src="../img/logo.png" alt="Boi-Toi" />
             </a>
           </div>
         </div>
